<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/map"
                android:id="@+id/chooseMapBtn"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/chooseRestaurantBtn"
                android:layout_toStartOf="@+id/chooseRestaurantBtn"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restaurants"
                android:id="@+id/chooseRestaurantBtn"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shortlist"
                android:id="@+id/chooseShortListBtn"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/chooseRestaurantBtn"
                android:layout_toEndOf="@+id/chooseRestaurantBtn"/>
    </RelativeLayout>

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:id="@+id/map"
              tools:context="biz.aejis.gourmet.app.activities.MainActivity"
              android:name="com.google.android.gms.maps.SupportMapFragment"
              android:layout_below="@+id/linearLayout"/>
</LinearLayout>