<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              style="@style/BodyRestaurantBlock">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/red"
                    android:layout_gravity="fill_horizontal"
                    android:id="@+id/rlTitle">

        <ImageView
                android:id="@+id/ivBackFromBook"
                android:layout_width="30dp"
                android:layout_height="20dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_gravity="left|center_vertical"
                android:src="@drawable/arrow_to_left"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/app_name"
                android:id="@+id/tvActivityTitle"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/sand"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"/>
    </RelativeLayout>

    <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/scrollView">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

            <com.daimajia.slider.library.SliderLayout
            android:id="@+id/slider"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            />

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingBottom="5dp"
                    style="@style/TitleRestaurantBlock">

                <Button
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/toShortList"
                        android:id="@+id/btnAddToShortlist"
                        android:layout_below="@+id/tvRestaurantName"
                        android:layout_alignRight="@+id/tvRestaurantName"
                        android:layout_alignEnd="@+id/tvRestaurantName"
                        style="@style/Button.RedButton"
                        android:maxLines="1"
                        android:lines="1"/>

                <Button
                        style="@style/Button.RedButton"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/fromShortList"
                        android:id="@+id/btnRemoveFromShortList"
                        android:layout_below="@+id/tvRestaurantName"
                        android:layout_alignRight="@+id/tvRestaurantName"
                        android:layout_alignEnd="@+id/tvRestaurantName"
                        android:visibility="gone"
                        />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Le First, resturant boudoir Paris"
                        android:id="@+id/tvRestaurantName"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        style="@style/Text.GreyText.BigText"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="5dp"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="New Text"
                        android:id="@+id/tvStreet"
                        style="@style/Text.LittleText.GreenText"
                        android:layout_alignTop="@+id/btnAddToShortlist"
                        android:layout_alignLeft="@+id/tvRestaurantName"
                        android:layout_alignStart="@+id/tvRestaurantName"
                        android:layout_toLeftOf="@+id/btnAddToShortlist"
                        android:layout_toStartOf="@+id/btnAddToShortlist"/>
            </RelativeLayout>

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="10dp"
                    android:visibility="visible">

                <RatingBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/foodRatingBar"
                        android:id="@+id/ratingRestaurantBar"
                        android:numStars="5"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentRight="true"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/average_check"
                        android:id="@+id/textView2"
                        style="@style/Text.MiddleText.GreyText"/>

                <TextView
                        style="@style/Text.MiddleText.GreyText.Bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="от 70 €"
                        android:id="@+id/tvAverageCheck"
                        android:layout_alignBaseline="@+id/textView2"
                        android:layout_alignBottom="@+id/textView2"
                        android:layout_toRightOf="@+id/textView2"
                        android:layout_toEndOf="@+id/textView2"
                        android:layout_marginLeft="5dp"/>

                <TextView
                        style="@style/Text.MiddleText.GreyText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Время работы:"
                        android:id="@+id/textView3"
                        android:layout_below="@+id/textView2"
                        android:layout_alignLeft="@+id/textView2"
                        android:layout_alignStart="@+id/textView2"
                        android:layout_marginTop="15dp"/>

                <Button
                        style="@style/Button.GreenButton"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/sum_up"
                        android:id="@+id/btnSumUp"
                        android:layout_alignTop="@+id/textView3"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:visibility="invisible"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Пн-пт 9:00 - 23:00\nСб-вс 9:00 - до последнего клиента"
                        android:id="@+id/tvWorkingTime"
                        android:layout_below="@+id/textView3"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        style="@style/Text.LittleText.GreyText"
                        android:layout_toLeftOf="@+id/btnSumUp"
                        android:layout_toStartOf="@+id/btnSumUp"
                        android:layout_marginRight="5dp"/>

                <GridLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:columnCount="2"
                        android:alignmentMode="alignMargins"
                        tools:ignore="NewApi"
                        android:layout_below="@+id/tvWorkingTime"
                        android:id="@+id/atmosferesPlaceholder"
                        android:layout_marginTop="10dp">
                </GridLayout>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Тут ровно 140 символов о заведении. Его основная фишка. Мы конечно не Чехов, но краткость - сестра таланта."
                        android:id="@+id/tvDetails"
                        android:layout_below="@+id/atmosferesPlaceholder"
                        android:layout_alignLeft="@+id/atmosferesPlaceholder"
                        android:layout_alignStart="@+id/atmosferesPlaceholder"
                        android:layout_alignRight="@+id/atmosferesPlaceholder"
                        android:layout_alignEnd="@+id/atmosferesPlaceholder"
                        style="@style/Text.LittleText.GreyText"
                        android:layout_marginTop="10dp"/>

            </RelativeLayout>

            <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="70dp"
                    >

                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/favorite_dishes"
                        android:id="@+id/btnFavoriteDishes"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        style="@style/Button.RedButton.WithMargin"
                        android:layout_alignRight="@+id/frameLayout"
                        android:layout_alignEnd="@+id/frameLayout"
                        android:visibility="gone"/>

                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/book_the_table"
                        android:id="@+id/btnBookTheTable"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        style="@style/Button.RedButton.WithMargin"
                        android:layout_toRightOf="@+id/frameLayout"
                        android:layout_toEndOf="@+id/frameLayout"/>

                <FrameLayout
                        android:layout_width="1dp"
                        android:layout_height="1dp"
                        android:id="@+id/frameLayout"
                        android:layout_centerVertical="true">
                </FrameLayout>

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>